# opencamlib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json
refactor/: README.md
refactor/docs/: KDTree.md  Legacy_OCL.md  Refactor_OCL.md  Refactor_OCL_CGAL.md  TDD.md  adaptive_algorithm.md  cutter.md  drop_cutter.md  push_cutter.md  weave.md
refactor/examples/: CMakeLists.txt  vtkDearImGuiInjector.h
refactor/examples/imgui-vtk/: CMakeLists.txt  VtkViewer.cpp  VtkViewer.h  imgui_vtk_demo.h  main.cpp  ocl_demo.h  ocl_utils.cpp  ocl_utils.h
refactor/examples/nogui/: CMakeLists.txt  main.cpp
refactor/examples/vtkImGuiInjector/: AABBTreeAdaptor.h  CMakeLists.txt  CutterTimerCallback.h  DialogHelpers.cpp  DialogHelpers.h  OverlayUI.cpp  OverlayUI.h  RecentFilesManager.cpp  RecentFilesManager.h  STLSurfUtils.cpp  STLSurfUtils.h  SettingsManager.cpp  SettingsManager.h  UIComponents.cpp  UIComponents.h  main.cpp  oclBenchmark.cpp  oclBenchmark.h  oclUtils.cpp  oclUtils.h  vtkActorManager.h  vtkCutters.cpp  vtkCutters.h  vtkDearImGuiInjector.cpp  vtkDearImGuiInjector.h  vtkKeySymToImGuiKey.h  vtkUtils.cpp  vtkUtils.h
refactor/reports/: 网格质量和并行计算优化报告_20250328.md
refactor/src/: CMakeLists.txt  ocl.hpp  version_string.cmake
refactor/src/algo/: CMakeLists.txt  adaptivewaterline.cpp  adaptivewaterline.hpp  batchpushcutter.cpp  batchpushcutter.hpp  fiber.cpp  fiber.hpp  fiberpushcutter.cpp  fiberpushcutter.hpp  interval.hpp  operation.hpp  simple_weave.hpp  waterline.cpp  waterline.hpp  weave.hpp  weave_typedef.hpp  zigzag.hpp
refactor/src/cmake/: opencamlib-config.cmake.in
refactor/src/common/: CMakeLists.txt  clfilter.hpp  kdtree.hpp  lineclfilter.cpp  lineclfilter.hpp  numeric.cpp  numeric.hpp  types.hpp
refactor/src/cutter/: CMakeLists.txt  ball_cutter.hpp  bull_cutter.hpp  cone_cutter.hpp  cutter.hpp  cutter_factory.hpp  cylindrical_cutter.hpp  torus_cutter.hpp
refactor/src/cutters/: CMakeLists.txt  ballcutter.hpp  bullcutter.cpp  bullcutter.hpp  compositecutter.cpp  compositecutter.hpp  conecutter.cpp  conecutter.hpp  cylcutter.cpp  cylcutter.hpp  ellipse.cpp  ellipse.hpp  ellipseposition.cpp  ellipseposition.hpp  millingcutter.cpp  millingcutter.hpp
refactor/src/dropcutter/: CMakeLists.txt  adaptivepathdropcutter.cpp  adaptivepathdropcutter.hpp  batchdropcutter.cpp  batchdropcutter.hpp  pathdropcutter.cpp  pathdropcutter.hpp  pointdropcutter.cpp  pointdropcutter.hpp
refactor/src/geo/: CMakeLists.txt  arc.hpp  bbox.hpp  ccpoint.hpp  clpoint.hpp  cutter_point.hpp  geometry.hpp  line.hpp  mesh.hpp  path.hpp  point.cpp  point.hpp  stlreader.hpp  stlsurf.cpp  stlsurf.hpp  triangle.cpp  triangle.hpp
refactor/src/tests/: CMakeLists.txt  test_cutter.cpp  test_geometry.cpp
refactor/tests/: CMakeLists.txt  main.cpp
refactor/tests/cutters/: test_ballcutter.cpp  test_bullcutter.cpp  test_conecutter.cpp  test_cylcutter.cpp  test_fiberpushcutter.cpp  test_pushcutter.cpp  test_stl_fiberpushcutter.cpp
refactor/tests/geo/: test_point.cpp
refactor/tests/utils/: triangles_utils.cpp  triangles_utils.h
stl/: ANC101-colored.stl  Cylinder Along-1 (Meshed).stl  Cylinder.stl  Tube (Meshed).stl  pycam-textbox-netgen.stl  wheel_in_box-netgen.stl
